--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hahaha, I know nothing.</h1>
-				<p>Just copying code...<a href="/about">This is an empty link</a></p>
+        		<h1>Jessica Chan</h1>
+				<p>Hahaha, I know nothing.  Just copying code...<a href="/about">This is an empty link</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
