--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
         		<li><a href="/cv">CV</a></li>
-        		<li><a href="/projects">Blog</a></li>
+        		<li><a href="/projects">Projects</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
         		<h1>Jessica Chan</h1>
+				<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTlJrZn-L7dmPz3BPUGHO-eSbor9Uh3DvQsmc14oXZlefdbVGTh4Q" alt="BTSbear">
 				<p>Hahaha, I know nothing.  Just copying code...<a href="/about">This is an empty link</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
@@ -24,6 +25,7 @@
     		<ul>
         		<li><a href="mailto:jk7chan@edu.uwaterloo.ca">email</a></li>
         		<li><a href="https://github.com/jeschan">github.com/jessicachan</a></li>
+			<li><a href="https://www.linkedin.com/in/jessicakchan/">linkedin.com/in/jessicakchan</a></li>
 			</ul>
 		</footer>
 	</body>
