--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Jessica Chan</h1>
-				<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTlJrZn-L7dmPz3BPUGHO-eSbor9Uh3DvQsmc14oXZlefdbVGTh4Q" alt="BTSbear">
+				<img class="img-circle" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTlJrZn-L7dmPz3BPUGHO-eSbor9Uh3DvQsmc14oXZlefdbVGTh4Q" alt="BTSbear">
 				<p>Hahaha, I know nothing.  Just copying code...<a href="/about">This is an empty link</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
