--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     		<div class="blurb">
         		<h1>Jessica Chan</h1>
 				<img class="img-circle" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTlJrZn-L7dmPz3BPUGHO-eSbor9Uh3DvQsmc14oXZlefdbVGTh4Q" alt="BTSbear">
-				<p>Hahaha, I know nothing.  Just copying code...<a href="/about">This is an empty link</a></p>
+				<p>Hello!  I'm a third year student at the University of Waterloo studying Psychology and Business.  I'm getting interested in web dev, digital design and marketing - so...hopefully I'll learn some more creating this site ^_^<a href="/about">This is an empty link</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
