--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Jessica Chan</h1>
-				<img src="https://ih0.redbubble.net/image.359562127.0006/flat,800x800,075,t.u2.jpg">
+				<img class="img-circle" src="https://ih0.redbubble.net/image.359562127.0006/flat,800x800,075,t.u2.jpg">
 				<p>This is a description about myself.</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
