--- a/project/index.html
+++ b/project/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Jessica Chan, Projects</title>
+		<link rel="stylesheet" type="text/css" href="/_layouts/default">
 	</head>
 	<body>
 		<nav>
