--- a/project/index.html
+++ b/project/index.html
@@ -17,6 +17,9 @@
     		<div class="blurb">
         		<h1>Hello, Hello</h1>
 				<p>These are some projects</p>
+				<video>
+					<source src="GIF 2.2.mp4" type="video/mp4">
+				</video>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
