--- a/project/index.html
+++ b/project/index.html
@@ -20,6 +20,8 @@
 				<video>
 					<source src="GIF 2.2.mp4" type="video/mp4">
 				</video>
+				<p>
+				<img src="J_Chan_lightbox.jpg">
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
