--- a/project/index.html
+++ b/project/index.html
@@ -22,6 +22,8 @@
 				</video>
 				<p>
 				<img src="J_Chan_lightbox.jpg">
+				<p>
+				<img src="Screen Shot 2016-10-19 at 5.47.20 PM.png">
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
