--- a/project/index.html
+++ b/project/index.html
@@ -21,9 +21,9 @@
 					<source src="GIF 2.2.mp4" type="video/mp4">
 				</video>
 				<p>
-				<img src="J_Chan_lightbox.jpg">
+				<img width="50%" height="50%" src="J_Chan_lightbox.jpg">
 				<p>
-				<img src="Screen Shot 2016-10-19 at 5.47.20 PM.png">
+				<img width="50%" height="50%" src="Screen Shot 2016-10-19 at 5.47.20 PM.png">
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
