--- a/project/index.html
+++ b/project/index.html
@@ -18,7 +18,7 @@
         		<h1>Hello, Hello</h1>
 				<p>These are some projects</p>
 				<video>
-					<source src="GIF 2.2.mp4" type="video/mp4">
+					<source width="50%" height="50%" src="GIF 2.2.mp4" type="video/mp4">
 				</video>
 				<p>
 				<img width="50%" height="50%" src="J_Chan_lightbox.jpg">
