--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	        	<li><a href="/about">About</a></li>
         		<li><a href="/cv">CV</a></li>
         		<li><a href="/project">Projects</a></li>
+			<li><a href="/playlists">Playlists</a></li>
     		</ul>
 		</nav>
 		<div class="container">
