--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html>
 	<head>
 		<title>Jessica Chan, Knows Nothing</title>
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	</head>
 	<body>
-		<nav>
+		<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
     		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/project">Projects</a></li>
-			<li><a href="/playlists">Playlists</a></li>
+        		<li><a href="#">Home</a></li>
+	        	<li><a href="about/index.html">About</a></li>
+        		<li><a href="cv/index.html">CV</a></li>
+        		<li><a href="project/index.html">Projects</a></li>
+			<li><a href="playlists/index.html">Playlists</a></li>
     		</ul>
 		</nav>
 		<div class="container">
@@ -25,7 +26,6 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:jk7chan@edu.uwaterloo.ca">email</a></li>
         		<li><a href="https://github.com/jeschan">github.com/jeschan</a></li>
             		<li><a href="linkedin.com/in/jessicakchan">LinkedIn</a></li>
 		</ul>
